--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
  <main class="container">
    <div class="current-weather">
-      <img class="icon" src="#" alt="img"   />
+      <img class="icon"   />
       <div class="temp">😋현재 온도</div>
-      <div class="temp">🛀현재 습도</div>
-      <div class="info">
+<div class="info">
         <div class="weather">🍔현재 날씨</div>
         <div class="city">🍜현재 위치</div> 
+</div>
     </div>  
   </div>
  </main>
